# aphator

./: README.md  RUNNING.md  TECHNICAL_DETAILS.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: api_keys.py
utils/: backtester.py  data_fetcher.py  incremental_learner.py  technical_analysis.py
utils/data_providers/: __init__.py  base_provider.py  coingecko_provider.py  yahoo_provider.py
