[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.0",
    "tensorflow>=2.18.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.53",
]
